# carmine

./: Cargo.toml  README.md
carmine_core/: Cargo.toml
crates/carmine_core/: Cargo.toml
crates/carmine_core/src/: bucket.rs  cabinet.rs  collection.rs  error.rs  key.rs  lib.rs  meta.rs  shelf.rs  store.rs  system_store.rs  transaction.rs  tub.rs  types.rs  validation.rs  value.rs
crates/carmine_core/src/database/: collection.rs  mod.rs  store.rs
crates/carmine_core/src/database/tests/: builder.rs  collections.rs  error_handling.rs  readonly_store.rs  store_operations.rs  store_readable.rs  transactions.rs  validation.rs
crates/carmine_core/src/shelf/: read.rs  write.rs
crates/carmine_core/src/tests/: builder.rs  collections.rs  error_handling.rs  mod.rs  readonly_store.rs  store_operations.rs  store_readable.rs  transactions.rs  validation.rs
crates/carmine_core/src/transaction/: get.rs  put.rs  set.rs
crates/carmine_core/src/types/: mod.rs  number.rs  number_old.rs
src/: config.rs  main.rs
src/api/: error.rs  extractors.rs  mod.rs  normal.rs  system.rs
tests/: .gitignore  package-lock.json  package.json  tsconfig.json  vitest.config.ts
tests/lib/: client.ts  types.ts
tests/setup/: server.ts
tests/suites/: data.test.ts  health.test.ts  system.test.ts
