[package]
name = "carmine"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [".", "crates/carmine_core"]

[dependencies]
carmine_core = { path = "crates/carmine_core" }
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
tracing-log = "0.2.0"
tracing = "0.1.41"
small_uid = "0.2.4"
dashmap = "6.1"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
jsonb = "0.5.5"
redb = "3.1.1"
clap = { version = "4", features = ["derive", "env"] }
toml_edit = { version = "0.22", features = ["serde"] }
thiserror = "2.0.18"
