[package]
name = "carmine_core"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonb = "0.5.5"
redb = { version = "3.1.1", features = ["cache_metrics", "logging"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.23.0"
